Fixing spacing on landing page section 3

--- a/src/scss/_composition.scss
+++ b/src/scss/_composition.scss
@@ -23,6 +23,7 @@
 
 .composition {
   position: relative;
+  margin-bottom: -15rem;
 
   &__photo {
     width: 65%;
